# temp_monitor

./: .gitignore  README.md
backend/: __init__.py  app.py  config.py  constants.py  errors.py  exceptions.py  main.py  pyproject.toml  schemas.py  serial_ingest.py
backend/backgroundJob/: __init__.py  serial_ingest.py
backend/models/: __init__.py  reading.py  user.py
backend/routes/: __init__.py  arduino.py  auth.py  health.py  readings.py
backend/services/: __init__.py  arduino_service.py  jwt_service.py  reading_service.py  serial_manager.py  token_storage.py  user_service.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_health.py
backend/utils/: __init__.py  auth_middleware.py  logging_config.py  middleware.py  rate_limiter.py  timezone_utils.py  validators.py
firmware/read_temp_c/: read_temp_c.ino
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Signup.tsx
frontend/src/services/: api.ts  arduinoService.ts  authService.ts  readingsService.ts
frontend/src/types/: index.ts
frontend/src/utils/: dateUtils.ts
