[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "temp-monitor-backend"
version = "0.1.0"
description = "Flask backend for Temperature Monitoring System (CSV storage)"
requires-python = ">=3.10"
dependencies = [
  "Flask==3.0.0",
  "pydantic==2.8.2",
  "python-dateutil==2.9.0.post0",
  "pyserial==3.5",
]

[project.urls]
Homepage = "https://example.local/temp-monitor"

[project.scripts]
temp-monitor-serial = "backend.serial_ingest:main"

[tool.hatch.build.targets.wheel]
packages = ["backend"]


