[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temp-monitor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.2",
    "flask-cors>=4.0.0",
    "pyserial>=3.5",
    "PyJWT>=2.8.0",
    "pytest>=7.4.0",
    "pytest-flask>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (dont run on every commit)",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["models", "routes", "storage", "services", "backgroundJob", "utils"]
py-modules = ["main", "config", "constants", "errors", "exceptions"]

[project.scripts]
dev = "main:run_backend"
serial = "backgroundJob.serial_ingest:main"
